<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/nav_view_primary">
		<item
			android:id="@+id/nav_training"
			android:icon="@drawable/ic_android_grey600_24dp"
			android:title="@string/navdrawer_item_training"/>
		<item
			android:id="@+id/nav_workouts"
			android:icon="@drawable/ic_android_grey600_24dp"
			android:title="@string/navdrawer_item_workouts"/>
		<item
			android:id="@+id/nav_exercises"
			android:icon="@drawable/ic_android_grey600_24dp"
			android:title="@string/navdrawer_item_exercises"/>
	</group>

	<!--<group android:id="@+id/nav_view_secondary">-->
		<!--<item-->
			<!--android:id="@+id/nav_weight"-->
			<!--android:icon="@drawable/ic_android_grey600_24dp"-->
			<!--android:title="@string/navdrawer_item_weight"/>-->
		<!--<item-->
			<!--android:id="@+id/nav_statistics"-->
			<!--android:icon="@drawable/ic_android_grey600_24dp"-->
			<!--android:title="@string/navdrawer_item_statistics"/>-->
	<!--</group>-->

	<group android:id="@+id/nav_view_ternary">
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_android_grey600_24dp"
			android:title="@string/navdrawer_item_settings"/>
	</group>
</menu>
